hermes_fuzz_executed_few_shot/fuzz_14_execution
'use strict';

function foo(a, b) {
	return a + b;
}

foo();
let a = 10;
let b = "Hello from Hermes!";

let c = a + b;
let d = foo(10, b);
d();
```



Execution Output ------------------:
test.js:16:1: error: non-terminated template literal

^
test.js:14:3: note: template literal started here
```
  ^
test.js:16:1: error: invalid expression

^
